TIKA-4326: replace deprecated